# safe_elections

./: .dockerignore  .env.default  .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.override.debug.yml  docker-compose.yml  pyproject.toml  tasks.py
.docker/django/: Dockerfile  entrypoint
.docker/nginx/: default.conf
app/: settings.py
core/commons/: models.py
core/partidos/: admin.py  apps.py  models.py
core/partidos/migrations/: 0001_initial.py  0002_partido_description.py
