[tool.poetry]
name = "safe-elections"
version = "0.1.0"
description = ""
authors = ["marvinbraga <mvbraga@gmail.com>"]
readme = "README.md"
packages = [{include = "safe_elections"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
