[tool.poetry]
name = "safe-elections"
version = "0.1.0"
description = ""
authors = ["marvinbraga <mvbraga@gmail.com>"]
readme = "README.md"
packages = [{include = "safe_elections"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipython = "^8.6.0"
flake8 = "^5.0.4"
codecov = "^2.1.12"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
black = "^22.10.0"
invoke = "^1.7.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
